--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "lib": [
       "ES2020",
       "DOM",
-      "DOM.Iterable"
+      "DOM.Iterable",
+      "esnext"
     ],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -14,6 +15,8 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "jsx": "react-jsx",
     /* Linting */
@@ -37,13 +40,5 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ],
-  "types": [
-    "node",
-    "jspdf",
-    "html2canvas"
-  ],
-  "typeRoots": [
-    "node_modules/@types"
   ]
 }
